--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
   var getWizardHeight = function () {
     return 1.337 * wizardWidth ;
   };
-  var getWzardX = function (width) {
-    return width / 2;
+  var getWizardX = function (width) {
+    return (width  - wizardWidth) / 2;
   };
   var getWizardY = function (height) {
-    return (height * 2) / 3;
+    return ((height + getWizardHeight()) / 3);
   };
 </script>
 <script src="js/game.js"></script>
