--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
 
 
     <div class="setup-artifacts-shop">
-      <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
+      <div class="setup-artifacts-cell">
+        <img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
       </div>
-      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true"></div>
       <div class="setup-artifacts-cell"></div>
       <div class="setup-artifacts-cell"></div>
 
@@ -125,7 +126,7 @@
         <input type="hidden" name="fireball-color" value="#ee4830">
       </div>
 
-      <div class="setup-artifacts" dropzone="move">
+      <div class="setup-artifacts" dropzone="copy">
         <div class="setup-artifacts-cell"></div>
         <div class="setup-artifacts-cell"></div>
         <div class="setup-artifacts-cell"></div>
@@ -200,6 +201,7 @@
 </script>
 <script src="js/stat.js"></script>
 <script src="js/setup.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/game.js"></script>
 
 </body>
